# AccordKV

./: .gitignore  ACCORD_KV_paper.bib  ACCORD_KV_paper.tex  COMPILE_README.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  pyproject.toml  requirements.txt  train.py
accordkv/: __init__.py  merge.py
core/: __init__.py  acr.py  attn_stats.py  exact_local.py  merge.py  mock_attention_server.py
docs/: ACCORD_KV_feasibility_report.md  ARCHITECTURE.md  AVL_feasibility_report.md  PROJECT_FILE_INDEX.md  algorithm_improvements.md  paper_outline_v0.1.md  project_summary.md  审核发现汇总.md
emam_model/: __init__.py  emam_se.py  ia_dtp.py  model.py  trigger.py  ua_pgd.py
gpu/: exp_ppl_direct.py  exp_ppl_v8.py  fix_v7_to_v8.py  gpu_all_exp_v5.py  gpu_model_loader.py  gpu_rank32.py  gpu_svd_compress_v5.py  gpu_svd_compress_v6.py  gpu_svd_compress_v7.py  gpu_svd_compress_v8.py  mini_test.py
results/: ACCORD_E7_Review_Report.md  all_exp_v5_summary.json  bug_analysis.json  g_decode_r32.json  g_decode_r8.json  g_prefill2048_r32.json  g_prefill2048_r8.json  g_prefill512_r32.json  g_prefill512_r8.json  gpu_real_experiment_report.md  head_analysis.json  m_decode_r32.json  m_decode_r8.json  m_prefill2048_r32.json  m_prefill2048_r8.json  m_prefill512_r32.json  m_prefill512_r8.json
simulation/: __init__.py  accord_backend.py  anytime_corrected_theory.py  anytime_theory.py  backend_demo.py  discussion_architecture.py  discussion_cross_block.py  discussion_cross_domain.py  discussion_elegant_strategy.py  exp10_kmean_normalized_sketch.py  exp11_cbsa_mcr2_representatives.py  exp12_medium.py  (+60 more)
(+66 files in other folders)
